# daily_paper_summary

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  measure_codex_latency.py  pyproject.toml
.codex/: config.toml
cache/: cache.sqlite3
config/: default_config.json
docs/launchd/: com.daily_paper_summary.plist
docs/plans/: 2026-02-06-arxiv-mvp-design.md  2026-03-11-browser-app-refactor.md  2026-03-16-backend-package-reorg.md
docs/prompts/: init_version.md  ssrn_minimal_intrusion_prompt.md
newspaper/markdown/: 0206_papers.md  0226_papers.md  0227_papers.md  0311_papers.md  0316_papers.md  0322_papers.md
src/: __init__.py  app.py  arxiv_source.py  ieee_source.py  interfaces.py  llm.py  models.py  multi_source.py  normalize.py  output_writer.py  paper_cache.py  paper_config.py  pipeline.py  ranker.py  renderer.py  scopus_source.py  summarizer.py
src/backend/: __init__.py  app.py  arxiv_source.py  config.py  ieee_source.py  interfaces.py  multi_source.py  normalize.py  paper_config.py  pipeline.py  ranker.py  renderer.py  scopus_source.py  service.py  summarizer.py  web_app.py
src/daily_paper_summary/: app.py  arxiv_source.py  cache.py  config.py  normalize.py  pipeline.py  ranker.py  renderer.py  summarizer.py
src/frontend/: app.js  index.html  styles.css
test/: test_app_delete_last_file.py  test_app_logging.py  test_cache.py  test_ieee_source.py  test_normalize.py  test_output_writer.py  test_paper_config.py  test_pipeline.py  test_prompt_templates.py  test_renderer.py  test_source_factory.py  test_typing.py
test/backend/: test_app_logging.py  (+14 more)
(+42 files in other folders)
